--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,15 @@
 
 <html>
 <head>
+
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
+	<link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
 <body>
 	<!-- this is a comment in HTML -->
+	
 	<h1>Kittinan Ponkaew</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
@@ -15,6 +18,10 @@
 	<p>My work in progress.</p>
 
 	<h4>Projects</h4>
+	<img src="nls.jpg"/>
+	<p>Description of image: Image from the web. Nothing much to it.</p>
+	
+
 	<ol>
 		<li>Waiting in line</li>
 		<li>Needfinding</li>
